...
}



//#pragma methods - alert user
//-(void)alertUser:(NSString*)message{
//    UIAlertController *alertController = [UIAlertController alertControllerWithTitle: @"TrackUnavailable" message: userMessage preferredStyle:UIAlertControllerStyleAlert];
//    UIAlertAction* ok = [UIAlertAction actionWithTitle: @"Ok"   style:UIAlertActionStyleDefault handler:nil];
//    [alertController addAction:ok];
//    [self presentViewController:alertController animated:YES completion:nil];
//    
//}


...
